deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aisphere-iam
  namespace: aisphere
  labels:
    app: aisphere-iam
    service: iam
spec:
  type: ClusterIP
  selector:
    app: aisphere-iam
  ports:
    - name: http
      port: 18080
      targetPort: http
    - name: grpc
      port: 19080
      targetPort: grpc
    - name: metrics
      port: 19180
      targetPort: metrics
